    LOGSTASH-1038; Patch by Jason Koppe)
  - bugfix: relp: allow multiple client socket connections to RELP input
    (LOGSTASH-707, LOGSTASH-736, LOGSTASH-921)

  ## filters
  - bugfix: geoip was broken by the previous release (LOGSTASH-1013)

  ## outputs
  - feature: irc output now supports 'secure' setting to use ssl (LOGSTASH-139)
  - feature: nagios_nsca has new setting 'message_format'
  - bugfix: elasticsearch_http was broken in 1.1.10 (LOGSTASH-1004)
  - bugfix: rabbitmq was broken by the previous release (LOGSTASH-1003,
    LOGSTASH-1038; Patch by Jason Koppe)

1.1.10 (April 16, 2013)
  ## general
  - On linux, all threads will set their process names so you can identify
    threads in tools like top(1).
  - Java 5 is no longer supported (You must use Java 6 or newer).
  - Windows line terminators (CRLF) are now accepted in config files.
  - All AWS-related plugins now have the same configuration options:
    region, access_key_id, secret_access_key, use_ssl, and
    aws_credentials_file. Affected plugins: cloudwatch output,
    sns output, sqs output, sqs input. (LOGSTASH-805)
  - Lots of documentation fixes (James Turnbull, et al)
  - The amqp plugins are now named 'rabbitmq' because it *only* works
    with rabbitmq. The old 'amqp' name should still work, but it will
    be removed soon while 'rabbitmq' will stay. (Patches by Michael Zaccari)
  - New flag '--configtest' to test config and exit. (Patch by Darren Patterson)
  - Improved error feedback logstash gives to you as a user.

  ## inputs
  - new: elasticsearch: this input allows you to stream search results from
    elasticsearch; it uses the Scroll API.
  - new: websocket. Currently supports acting as a websocket client.
  - new: snmptrap, to receive SNMP traps (patch by Paul Czar)
  - new: varnishlog input to read from the Varnish Cache server's shared memory
    log (LOGSTASH-978, #422; Louis Zuckerman)
  - new: graphite input. Supports the plain text carbon tcp protocol.